--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@
 
 html {
   width: 1280px;
-  height: 2930px;
+  /*height: 2930px;*/
 }
 
 /* navbar */
@@ -113,9 +113,9 @@ main {
 
 .item {
   background-color: white;
-  display: flex;
+  /*display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-between;*/
   width: 538px;
   box-shadow: 0 3px 7px -3px rgba(0, 0, 0, 0.9);
 }
@@ -128,17 +128,44 @@ main {
   padding-bottom: 12px;
   padding-top: 25px;
   width: 490px;
-  margin-left: 25px;
+  margin-left: 24px;
   text-transform: uppercase;
+  margin-top: -97px;
 }
 
+.blog-img {
+  float: right;
+  margin-bottom: 30px;
+  margin-right: 20px;
+}
+
+.entry-title {
+  font-size: 25px;
+  font-family: 'Josefin Sans';
+  margin-top: 50px;
+  margin-left: 25px;
+}
+
+.primary-txt {
+  font-family: 'Noto Serif';
+  margin-left: 25px;
+  font-size: 16px;
+  line-height: 200%;
+}
+
+
+
 .date {
-  margin-left: 90px;
+  width: 50%;
+  text-align: center;
+  /*margin-left: 90px;*/
   margin-top: 15px
 }
 
 .category {
-  margin-right: 70px;
+  width: 50%;
+  text-align: center;
+  /*margin-right: 70px;*/
   margin-top: 15px;
 }
 
@@ -148,6 +175,7 @@ main {
 }
 
 .icon-wrapper {
+  display: block;
   height: 50px;
   width: 50px;
   background-color: rgb(238, 234, 223);
@@ -155,8 +183,12 @@ main {
   color: white;
   padding-left: 17px;
   padding-top: 15px;
-  position: absolute;
+  margin: 0 auto;
+  margin-top: 30px;
+  position: relative;
 }
+
+
 
 aside {
   display: inline-block;
@@ -167,6 +199,26 @@ aside {
   margin-right: 50px;
   box-shadow: 0 3px 5px 3px rgba(207, 207, 207, 0.8);
 }
+
+.aside-heading {
+  text-align: center;
+  font-size: 25px;
+  font-family: 'Josefin Sans';
+  margin-top: 55px;
+  margin-bottom: 35px;
+  padding-bottom: 35px;
+  border-bottom: solid;
+  width: 285px;
+  margin-left: 31px;
+}
+
+aside p {
+  width: 285px;
+  font-size: 15px !important;
+  line-height: 210% !important;
+}
+
+/*285*/
 /* images */
 
 #dino {
@@ -202,6 +254,8 @@ aside {
   height: 200px;
   width: 200px;
   background-size: cover;
+  margin-top: 25px;
+  margin-left: 70px;
 }
 
 /* end images */
